# iCore3_ADP

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  Readme.md
ARM experiment routine/: ARM-experiment-routine.uvoptx  CMakeLists.txt
ARM experiment routine/RTE/: RTE_Components.h
ARM experiment routine/driver/: iCore3_buttons.hpp  iCore3_leds.hpp
ARM-experiment-routine/: ARM-experiment-routine.uvprojx
ARM-experiment-routine/Readme_Files/: iCore3_leds.md
ARM-experiment-routine/main/: main.cpp
ARM-experiment-routine/sys_Test/: buttonTest.cpp  buttonTest.hpp  ledTest.cpp  ledTest.hpp
DevOps/Scripts/: ApplyCodeStyle.sh
